[package]
name = "microarticles"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.3"
actix-files = "0.6.5"
actix-web = "4.5.1"
anyhow = "1.0.81"
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }

[build-dependencies]
anyhow = "1.0.81"

