[package]
name = "microarticles"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.3"
actix-files = "0.6.5"
actix-session = "0.9.0"
actix-web = "4.5.1"
anyhow = "1.0.81"
chrono = "0.4.37"
env_logger = "0.11.3"
once_cell = "1.19.0"
rand = "0.8.5"
regex = "1.10.4"
serde = "1.0.197"
serde_json = "1.0.115"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }
url = "2.5.0"
validator = { version = "0.18.0", features = ["derive"] }
webauthn-rs = { version = "0.4.8", features = ["danger-allow-state-serialisation"] }

[build-dependencies]
anyhow = "1.0.81"

